apps/ubys-core-web-app/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubys-core-web-app
  namespace: ubys-core-web-app-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
    - host: test.ubys.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubys-core-web-app
                port:
                  number: 80
